# srm_buggy_ws

./: .gitignore  CLONE_INSTRUCTIONS.md  CONTRIBUTING.md  README.md  run_bravo_demo.sh  run_demo.sh  test_bravo_nodes.sh
.github/workflows/: ros_build.yml
buggy_brain/: package.xml  setup.cfg  setup.py
buggy_brain/buggy_brain/: map_graph.py
src/buggy_brain/: setup.py
src/buggy_brain/buggy_brain/: arrow_teleop.py  crowd_detector.py  demo_visualizer.py  map_graph.py  nav2_destination_sender.py  obstacle_detector.py  path_planner_node.py  sensor_stub.py  set_destination.py  speed_controller.py  state_machine.py  steering_visualizer.py  ultrasonic_monitor.py  waypoint_follower.py
src/buggy_brain/test/: test_map_graph.py
src/buggy_bringup/: CMakeLists.txt  package.xml
src/buggy_bringup/config/: nav2_params.yaml  rviz_slam.rviz  slam_config.yaml
src/buggy_bringup/launch/: buggy_spawn.launch.py  campus_world.launch.py  full_system.launch.py  nav2_launch.py  slam_mapping.launch.py  teleop.launch.py
src/buggy_bringup/maps/: my_campus_map.pgm  my_campus_map.yaml
src/buggy_bringup/rviz/: srm_buggy_demo.rviz
src/buggy_bringup/scripts/: run_arrow_teleop.sh
src/buggy_bringup/worlds/: srm_campus.world
src/buggy_description/: CMakeLists.txt  package.xml
src/buggy_description/urdf/: buggy.urdf.xacro  buggy_urdf.xacro
src/docs/: SRM_Autonomous_Buggy_Master_Plan.docx  TEAM_ALPHA_INSTRUCTIONS.md
