<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>buggy_description</name>
  <version>0.0.0</version>
  <description>URDF and mesh files for the SRM autonomous buggy</description>
  <maintainer email="karthikvanapalli08@gmail.com">Karthik2509-git</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

<package format="3">
  <name>buggy_description</name>
  <version>1.0.0</version>
  <description>SRM Autonomous Buggy URDF and sensor description</description>
  <maintainer email="team@srm.edu">Team Alpha</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
